# bevy_ui_animation

./: .gitignore  .releaserc  Cargo.toml  README.md  deny.toml
.github/workflows/: release.yml
examples/: all.rs  rotation.rs  text.rs
src/: ease.rs  event.rs  lerp.rs  lib.rs  plugin.rs
