[package]
name = "bevy_ui_animation"
version = "0.0.0"
authors = ["miZyind <mizyind@gmail.com>"]
edition = "2021"
description = "A GSAP-like animation plugin for Bevy"
homepage = "https://github.com/miZyind/bevy_ui_animation"
repository = "https://github.com/miZyind/bevy_ui_animation"
license = "MIT"
keywords = ["game", "bevy", "bevy_ui", "animation", "easing"]

[dependencies]
bevy = { version = "0.6.1", default-features = false }
